tests/neg/i5004.scala
object i0 {
1 match {
def this(): Int  // error
  def this()  // error
}
}
